2000-06-08  Bibek Sahu <scorpio@dodds.net>

	* common/network.c: changed net_write() to queue data on in-progress
	connections.  The queueing logic was already there; just fixed that
	bit of logic.

2000-06-07  Steve Langasek <vorlon@dodds.net>

	* common/game.h: Removed redundant 'VERSION' define in header.
	We have config.h, let's start using it.

2000-06-07  Dave Cole <dave@dccs.com.au>

	* client/legend.c (legend_create_dlg): Fixed segfault
	dereferencing NULL game_params before game connection established.
	
2000-06-06  Andy Heroff <aheroff@mediaone.net>

	* Changed version number to 0.5.5 to prevent CVS users from using
	  incompatable versions.

2000-06-06  Roderick Schertler <roderick@argon.org>

	* client/resource.c: add a 'total' field to your list of resources.

2000-06-04  Steve Langasek <vorlon@dodds.net>

	* server/into-the-desert.map, server/greater-catan.map:
	Removed old-style .map files; these have been obsoleted by the
	.game files.

2000-06-01  Steve Langasek <vorlon@dodds.net>

	* gnocatan.spec: RPM layout fixed up to conform with the rest
	of Gnome packages.

2000-05-30  Bibek Sahu <scorpio@dodds.net>

	* server/gnocatan-server.c: Fixed a minor bug where the game was no
	longer being set to the first one loaded.

2000-05-30  Steve Langasek <vorlon@dodds.net>

	* acconfig.h, configure.in, common/map.[ch], server/server.c:
	Added support for new glib g_rand functions.  Untested.

2000-05-28  Dave Cole <dave@dccs.com.au>

	* client/client.c (mode_start): Goto mode_offline after
	sm_pop_all(), prevents stack underflow.
	
2000-05-28  Bibek Sahu <scorpio@dodds.net>
	* client/Makefile.am client/gui.c client/gui.h client/admin-gtk.c
	server/gnocatan-server.c: Added a basic network administration 
	interface (stole the interface from the gtk server).  Needs work.

2000-05-27  Steve Langasek <vorlon@dodds.net>

	* common/map.c, server/server.c: Converted common/map.c to use the
	Mersenne Twister PRNG; further tweaks in g_rand() (non)support.
